@@ -9,7 +9,6 @@ import ru.practicum.ewm.model.User;
 import ru.practicum.ewm.model.UserMapper;
 import ru.practicum.ewm.repository.UserRepository;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
@@ -32,14 +31,7 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public List<UserDto> get(Set<Long> ids, Pageable pageable) {
-        List<User> result;
-        if (ids == null) {
-            result = repository.findAll(pageable).toList();
-        } else {
-            result = repository.findByIdIn(ids, pageable);
-        }
-        return result.isEmpty() ? Collections.emptyList() : result.stream().map(mapper::userToUserDto)
-                .collect(Collectors.toList());
+        return repository.findByIdIn(ids, pageable).stream().map(mapper::userToUserDto).collect(Collectors.toList());
     }
 
     @Override
